# SurrealGAN

./: .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  setup.py
SurrealGAN/: Surreal_GAN_representation_learning.py  copula.py  data_loading.py  model.py  modules.py  networks.py  training.py  utils.py
datasets/: sample_code.py  sample_data.csv  toy_data_ground_truth.csv
pretrained_models/ad_2rindices/: apply_pretained_model.py  saved_model
pretrained_models/brain_aging_5rindices/: apply_pretained_model.py  saved_model
