[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[options]
test_suite = tests

[aliases]
test=pytest

[flake8]
statistics = true
exclude = .git
ignore = E203, E501, W503, B950
select = B,C,E,F,W,T4,B9
per-file-ignores =
    __init__.py: F401, F403

[mypy]
# Import discovery
namespace_packages = False
ignore_missing_imports = True

# Untyped definitions and calls
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True

# Configuring warnings
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_return_any = True
warn_unreachable = True

# Miscellaneous strictness flags
strict_equality = True

[mypy-tests.*]
ignore_errors = True